# chip-8r

./: .gitignore  Cargo.toml  README.md  crap.ch8
src/: audio.rs  bus.rs  constants.rs  cpu.rs  display.rs  error.rs  keyboard.rs  main.rs  registers.rs
